hphp/hack/test/typecheck/foreach_vector.php.exp
File "foreach_vector.php", line 21, characters 10-17:
Typing error (Typing[4110])
  File "foreach_vector.php", line 21, characters 10-13:
  Expected `num` because this is used in an arithmetic operation
  File "foreach_vector.php", line 18, characters 19-21:
  But got `Foo`
  File "collections/Vector.hhi", line 47, characters 50-51:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 588, characters 49-50:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 311, characters 56-57:
    via this generic `Tv`
  File "interfaces.hhi", line 125, characters 66-67:
    via this generic `Tv`
  File "interfaces.hhi", line 95, characters 53-54:
    via this generic `Tv`
  File "rx/interfaces.hhi", line 28, characters 52-53:
    via this generic `Tv`
